# llm_report

./: .gitignore  README.md  example.create_latex.py  main.py  main_clean.py  main_debug.py  main_final.py  main_fixed.py  main_fixed_final.py  main_gemini25.py  main_langgraph.py  main_with_langgraph.py  main_working.py  pyproject.toml
reports/: analysis_report.aux  analysis_report.out  analysis_report.tex  analysis_report.toc  business_report.aux  business_report.md  business_report.tex  report.aux  report.out  report.tex  report.toc
src/llm_report/application/services/: advanced_data_analysis_service.py  business_latex_report_service.py  business_report_generation_service.py  cleanup_service.py  data_analysis_service.py  data_loader_service.py  data_overview_service.py  dynamic_function_execution_service.py  latex_generation_service.py  llm_function_selection_service.py  markdown_to_latex_service.py  temp_save_service.py  unified_report_service.py
src/llm_report/application/use_cases/: advanced_data_analysis_use_case.py  data_analysis_use_case.py  function_calling_use_case.py  generate_content_use_case.py  simple_function_calling_use_case.py
src/llm_report/domain/entities/: data_analysis_request.py  data_analysis_response.py  generation_request.py  generation_response.py  workflow_node.py  workflow_state.py
src/llm_report/domain/repositories/: llm_repository.py
src/llm_report/domain/value_objects/: model_config.py  prompt.py
src/llm_report/infrastructure/config/: dependency_container.py
src/llm_report/infrastructure/services/: data_analysis_service.py
(+11 files in other folders)
